welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: T is already defined as variable T
  var T = new Array[Color](n)
      ^Array1:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T: Array[Color]
      ^Array1:6: error: local variables must be initialized
  var T: Array[Color]
      ^Array1:7: error: not found: value getMondHauteur
  var n : Int = getMondHauteur()
                ^